@@ -65,6 +65,7 @@ Mantis
  * Modified default/config_inc1.php to have more more css global variables.
  * Modified wordwrap to use built-in php function if available.
  * Modified bug_assign and bug_close to use g_quick_proceed.
+ * Modified bug_resolve to use only one form.
  * Added project name as supplementary info next to bug id in buglist for "All projects" option
  * Added Basic Authentication patch.
  * Added CSV Export patch.
